# ruleminer

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  conf.py  index.rst  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  api_docs.md  conf.py  contributing.md  history.md  index.md  index.rst  installation.md  installation.rst  interval_arithmetics.md  logging.md  make.bat  requirements.txt  syntax.md  usage.md  usage.rst
docs/api/: modules.rst  ruleminer.rst
notebooks/: Generating rules with decision trees.ipynb  Tutorial ruleminer.ipynb
ruleminer/: __init__.py  cli.py  const.py  encodings.py  evaluator.py  generate_tests.py  grammar.py  metrics.py  pandas_parser.py  parser.py  ruleminer.py  tolerance.py  utils.py
tests/: __init__.py  test_logging.py  test_ruleminer.py  test_table_function.py
